<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_your_availability"
                    android:textColor="@color/app_bar_color"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Spinner
                    android:id="@+id/availability_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edit_text_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv1"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_your_status"
                    android:textColor="@color/app_bar_color"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/availability_spinner"/>

                <EditText
                    android:id="@+id/status_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/hint"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edit_text_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_status"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/word_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_word_count"
                    android:textColor="@color/app_bar_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="42dp"
                    android:layout_marginTop="7dp"
                    app:layout_constraintTop_toBottomOf="@id/status_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_hyper_local_distance"
                    android:textColor="@color/app_bar_color"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_edit_text"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:trackColorActive="#577080"
                    app:tickColor="@color/app_bar_color"
                    app:trackColor="@color/app_bar_color"
                    app:layout_constraintTop_toBottomOf="@id/tv_distance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_Min_distance"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:layout_marginStart="32dp"
                    android:textColor="@color/app_bar_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/slider_distance"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_max_distance"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/app_bar_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/slider_distance"/>

                <TextView
                    android:id="@+id/tv_select_purpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_purpose"
                    android:textColor="@color/app_bar_color"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/slider_distance"/>

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_select_purpose">


                    <TextView
                        android:id="@+id/coffee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:layout_marginEnd="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>

                    <TextView
                        android:id="@+id/business"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textAlignment="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>

                    <TextView
                        android:id="@+id/hobbies"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hobbies"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:layout_marginStart="10dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll1">


                    <TextView
                        android:id="@+id/friendship"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/friendship"
                        android:textSize="13sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:layout_marginEnd="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>

                    <TextView
                        android:id="@+id/movies"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/movies"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textAlignment="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>

                    <TextView
                        android:id="@+id/dinning"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dinning"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:layout_marginStart="10dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/dating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dating"
                    android:textSize="15sp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@drawable/text_unselected_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll2" />

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dating">


                    <TextView
                        android:id="@+id/matrimony"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/matrimony"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:layout_marginEnd="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/text_unselected_background"/>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_explore"
                    android:background="@drawable/btn_background"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/ll3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>